:iphone: Fix canvas mobile visibility

--- a/docs/css/responsive.scss
+++ b/docs/css/responsive.scss
@@ -7,7 +7,6 @@
     }
     .beer-box-1 {
         position: relative;
-        z-index: 1;
     }
     .beer-darth {
         opacity: .2;
