--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -138,7 +138,7 @@ $gap: 120px;
     }
     &.beer-font--description {
         text-transform: uppercase;
-        font-size: 1em;
+        font-size: 1.2em;
         letter-spacing: -1px;
         color: rgba(0, 0, 0, .4);
     }
